styles/style.css
/* ... */
@media screen and (max-width: 920px) {
    p {
        font-size: 1.6rem;
    }
    .nav-list {
        flex-direction: column;
    }
    .nav-list span {
        padding: 0 10px;
        font-size: 1.2rem;
        margin: 20px auto;
    }
    .about .container {
        flex-direction: column;
    }
    .about .profile-img {
        margin-right: 0;
    }
    .about .profile-img img {
        margin-bottom: 6rem;
        max-width: 450px;
    }
}

@media screen and (max-width: 870px) {
    .contact-info .contact-map iframe {
        width: 500px;
        height: 300px;
    }
}

@media screen and (max-width: 768px) {
    .landing-text h1 {
        font-size: 6.5rem;
    }
    .landing-text h6 {
        font-size: 1.7rem;
    }
    .about-heading h1 {
        font-size: 6rem;
    }
    .portfolio-description .cta {
        font-size: 1.3rem;
    }
    .timeline ul {
        width: 100%;
    }
    .timeline .date::before {
        display: contents;
    }
    .timeline .date::after {
        display: none;
    }
    .timeline h1 {
        margin-top: 2rem;
    }
    .contact-info .contact-map iframe {
        width: 450px;
        height: 280px;
    }
    .contact-ways {
        margin-top: 4rem;
    }
    .contact-ways i {
        font-size: 4.5rem;
    }
}

@media screen and (max-width: 670px) {
    .toggler-wrapper {
        width: 60px;
        height: 60px;
        top: 30px;
        right: 50px;
    }
    .menu-toggler {
        width: 40px;
        height: 26px;
        top: 17px;
    }
    .bar {
        padding: 2.5px;
    }
    .landing-text h1 {
        margin: 0 3%;
    }
    .contact-info .contact-map iframe {
        width: 370px;
        height: 270px;
    }
    .timeline h1 {
        font-size: 1.5rem;
    }
    .section-heading h1::before {
        width: 15rem;
    }
}

@media screen and (max-width: 570px) {
    .contact-info .contact-map iframe {
        width: 300px;
        height: 250px;
    }
    .contact-ways i {
        font-size: 4rem;
    }
    .contact-name h3 {
        font-size: 1.5rem;
    }
    .contact-name span {
        font-size: 1.4rem;
    }
}

@media screen and (max-width: 470px) {
    .container {
        width: 100%;
    }
    .landing-text .resume {
        padding: 1rem 2rem;
        font-size: 1rem;
    }
    .portfolio-description .project-stack span {
        font-size: 1rem;
    }
    .contact-info .contact-map iframe {
        display: none;
    }
    .contact-ways {
        margin-top: 0;
    }
    .contact-ways i {
        font-size: 3rem;
        margin-right: 0;
    }
    .contact-name {
        justify-content: center;
        flex-direction: column;
        text-align: center;
    }
    .contact-name span {
        font-size: 1.2rem;
    }
    .portfolio-description .cta span {
        font-size: 1rem;
    }
}

